<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/reminder_setting"
        app:icon="@drawable/ic_notification"
        >

        <SwitchPreferenceCompat
            app:key="daily_release_reminder"
            app:summary="@string/release_reminder_summary"
            app:title="@string/release_reminder" />

        <SwitchPreferenceCompat
            app:key="daily_reminder"
            app:summary="@string/daily_reminder_summary"
            app:title="@string/daily_reminder" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/language_setting"
        android:icon="@drawable/ic_settings"
        >

        <Preference
            app:key="change_language"
            app:title="@string/change_language" />

    </PreferenceCategory>

</PreferenceScreen>
