<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_marginEnd="8dp"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:id="@+id/img_item_photo"
            android:scaleType="fitXY"
            android:contentDescription="@string/poster_image"
            android:background="@drawable/img_bg_card"/>
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/movie_name"
            android:ellipsize="end"
            android:layout_marginBottom="8dp"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_remove_movie"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/design_default_color_error"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/remove"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>