<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/MyAppTheme"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/backdrop_image"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:contentDescription="@string/poster_image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary"
            tools:layout_editor_absoluteX="51dp"
            tools:srcCompat="@drawable/placeholder" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_img"
            android:layout_width="220dp"
            android:layout_height="280dp"
            android:layout_marginTop="32dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="4sp"
            app:layout_constraintEnd_toEndOf="@+id/backdrop_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="220dp"
                android:layout_height="280dp"
                android:contentDescription="@string/poster_image"
                android:scaleType="fitXY"

                android:src="@drawable/placeholder"
                app:srcCompat="@color/colorPrimaryDark"
                tools:srcCompat="@drawable/placeholder" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="#324292"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_img">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/title_of_movie"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardview_title"
                app:layout_constraintEnd_toEndOf="@+id/cardview_title"
                app:layout_constraintStart_toStartOf="@+id/cardview_title"
                app:layout_constraintTop_toTopOf="@+id/cardview_title" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/img_vote_count"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/poster_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_title"
            app:srcCompat="@drawable/love" />

        <ImageView
            android:id="@+id/img_calendar"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/poster_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_title"
            app:srcCompat="@drawable/calendar" />

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/poster_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_title"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_length_move"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_vote_count" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/example_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_calendar" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="46dp"
            android:text="@string/rating_star_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_star" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/overview_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview" />

        <Button
            android:id="@+id/btn_add_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_add_favorite"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            app:srcCompat="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/tv_added_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/added_to_favorite"
            android:textStyle="bold"
            app:layout_constraintCircleRadius="4dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_favorite" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>